Forms complete. TODO: Fix datetimepickergit status

--- a/templates/error.html
+++ b/templates/error.html
@@ -18,11 +18,11 @@
                 text-align: center;
                 display: block;
                 position: relative;
-                width:80%;
+                width:100%;
                 margin:100px auto;
             }
             ._404{
-                font-size: 200px;
+                font-size: 20em;
                 position: relative;
                 display: inline-block;
                 z-index: 2;
@@ -256,7 +256,7 @@
         <br>
         <a class='btn' href='/'>Go Home</a>
     </div>
-    <footer class="text-center">
+    <footer class="container text-center">
         {{ description }}
     </footer>
 </div>
