--- a/templates/contact.html
+++ b/templates/contact.html
@@ -25,6 +25,8 @@
     <!-- Custom styles for this template -->
     <link href="/static/css/freelancer.min.css" rel="stylesheet">
 
+    <link href="/static/css/animatedsend.css" rel="stylesheet">
+
 </head>
 
 <body id="page-top">
@@ -42,7 +44,7 @@
         <div class="collapse navbar-collapse" id="navbarResponsive">
             <ul class="navbar-nav ml-auto">
                 <li class="nav-item mx-0 mx-lg-1">
-                    <a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger" href="/services">Services</a>
+                    <a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger" href="/about">About</a>
                 </li>
                 <li class="nav-item mx-0 mx-lg-1">
                     <a class="active nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger" href="/contact">Contact
@@ -63,14 +65,15 @@
                     <div class="control-group">
                         <div class="form-group floating-label-form-group controls mb-0 pb-2">
                             <label>Name</label>
-                            <input class="form-control" id="name" type="text" placeholder="Name" required="required"
+                            <input class="form-control" id="name" name="name" type="text" placeholder="Name"
+                                   required="required"
                                    data-validation-required-message="Please enter your name.">
                         </div>
                     </div>
                     <div class="control-group">
                         <div class="form-group floating-label-form-group controls mb-0 pb-2">
                             <label>Email Address</label>
-                            <input class="form-control" id="email" type="email" placeholder="Email Address"
+                            <input class="form-control" id="email" name="email" type="email" placeholder="Email Address"
                                    required="required"
                                    data-validation-required-message="Please enter your email address.">
                         </div>
@@ -78,7 +81,7 @@
                     <div class="control-group">
                         <div class="form-group floating-label-form-group controls mb-0 pb-2">
                             <label>Phone Number</label>
-                            <input class="form-control" id="phone" type="tel" placeholder="Phone Number"
+                            <input class="form-control" id="phone" name="phone" type="tel" placeholder="Phone Number"
                                    required="required"
                                    data-validation-required-message="Please enter your phone number.">
                         </div>
@@ -86,7 +89,7 @@
                     <div class="control-group">
                         <div class="form-group floating-label-form-group controls mb-0 pb-2">
                             <label>Message</label>
-                            <textarea class="form-control" id="message" rows="5" placeholder="Message"
+                            <textarea class="form-control" id="message" name="message" rows="5" placeholder="Message"
                                       required="required"
                                       data-validation-required-message="Please enter a message."></textarea>
                         </div>
@@ -99,6 +102,22 @@
                     </div>
                 </form>
                 <div id="success" class="alert alert-success text-center" role="alert" style="display:none;"></div>
+                <div class="loading-window" id="car-animation" style="display: none;">
+                    <div class="car">
+                        <div class="strike"></div>
+                        <div class="strike strike2"></div>
+                        <div class="strike strike3"></div>
+                        <div class="strike strike4"></div>
+                        <div class="strike strike5"></div>
+                        <div class="car-detail spoiler"></div>
+                        <div class="car-detail back"></div>
+                        <div class="car-detail center"></div>
+                        <div class="car-detail center1"></div>
+                        <div class="car-detail front"></div>
+                        <div class="car-detail wheel"></div>
+                        <div class="car-detail wheel wheel2"></div>
+                    </div>
+                </div>
                 <br>
                 <div id="fail" class="alert alert-danger" role="alert" style="display:none;"></div>
             </div>
@@ -110,44 +129,44 @@
     <div class="container">
         <div class="row">
             <div class="col-md-4 mb-5 mb-lg-0">
-                <h4 class="text-uppercase mb-4">Location</h4>
-                <p class="lead mb-0">2215 John Daniel Drive
-                    <br>Clark, MO 65243</p>
+                <h4 class="text-uppercase mb-4 text-white">Location</h4>
+                <p class="lead mb-0">San Francisco
+                    <br>California</p>
             </div>
             <div class="col-md-4 mb-5 mb-lg-0">
-                <h4 class="text-uppercase mb-4">Around the Web</h4>
+                <h4 class="text-uppercase mb-4 text-white">Find us</h4>
                 <ul class="list-inline mb-0">
-                    <li class="list-inline-item">
-                        <a class="btn btn-outline-light btn-social text-center rounded-circle" href="#">
-                            <i class="fa fa-fw fa-facebook"></i>
-                        </a>
-                    </li>
-                    <li class="list-inline-item">
-                        <a class="btn btn-outline-light btn-social text-center rounded-circle" href="#">
-                            <i class="fa fa-fw fa-google-plus"></i>
-                        </a>
-                    </li>
-                    <li class="list-inline-item">
-                        <a class="btn btn-outline-light btn-social text-center rounded-circle" href="#">
-                            <i class="fa fa-fw fa-twitter"></i>
-                        </a>
-                    </li>
-                    <li class="list-inline-item">
-                        <a class="btn btn-outline-light btn-social text-center rounded-circle" href="#">
-                            <i class="fa fa-fw fa-linkedin"></i>
-                        </a>
-                    </li>
-                    <li class="list-inline-item">
-                        <a class="btn btn-outline-light btn-social text-center rounded-circle" href="#">
-                            <i class="fa fa-fw fa-dribbble"></i>
-                        </a>
-                    </li>
+                    <!--<li class="list-inline-item">-->
+                        <!--<a class="btn btn-outline-light btn-social text-center rounded-circle" href="#">-->
+                            <!--<i class="fa fa-fw fa-facebook"></i>-->
+                        <!--</a>-->
+                    <!--</li>-->
+                    <!--<li class="list-inline-item">-->
+                        <!--<a class="btn btn-outline-light btn-social text-center rounded-circle" href="#">-->
+                            <!--<i class="fa fa-fw fa-google-plus"></i>-->
+                        <!--</a>-->
+                    <!--</li>-->
+                    <!--<li class="list-inline-item">-->
+                        <!--<a class="btn btn-outline-light btn-social text-center rounded-circle" href="#">-->
+                            <!--<i class="fa fa-fw fa-twitter"></i>-->
+                        <!--</a>-->
+                    <!--</li>-->
+                    <!--<li class="list-inline-item">-->
+                        <!--<a class="btn btn-outline-light btn-social text-center rounded-circle" href="#">-->
+                            <!--<i class="fa fa-fw fa-linkedin"></i>-->
+                        <!--</a>-->
+                    <!--</li>-->
+                    <!--<li class="list-inline-item">-->
+                        <!--<a class="btn btn-outline-light btn-social text-center rounded-circle" href="#">-->
+                            <!--<i class="fa fa-fw fa-dribbble"></i>-->
+                        <!--</a>-->
+                    <!--</li>-->
+                    <h6 class="lead mb-0 text-white">Coming soon!</h6>
                 </ul>
             </div>
             <div class="col-md-4">
-                <h4 class="text-uppercase mb-4">About Freelancer</h4>
-                <p class="lead mb-0">Freelance is a free to use, open source Bootstrap theme created by
-                    <a href="http://startbootstrap.com">Start Bootstrap</a>.</p>
+                <h4 class="text-uppercase mb-4 text-white">InspectX</h4>
+                <p class="lead mb-0">Inspecting and buying a car should not be difficult</p>
             </div>
         </div>
     </div>
