Finished front end TODO: gspread to sheets

--- a/templates/about.html
+++ b/templates/about.html
@@ -57,17 +57,10 @@
         <br><br><br>
         <h2 class="text-center text-uppercase">The Inspection</h2>
         <hr class="mb-5">
-        <div class="row">
-            <div class="col-md-3"></div>
-            <div class="col-md-6 text-center">
-                <p class="lead">There are a lot of things to check on a car before buying.</p>
-            </div>
-            <div class="col-md-3"></div>
-        </div>
         <div class="text-center mt-4">
             <a class="btn btn-xl btn-outline-dark" href="/static/img/checklist.pdf" target="_blank">
                 <i class="fa fa-download mr-2"></i>
-                Download the Inspection
+                Get the Inspection
             </a>
         </div>
     </div>
@@ -103,8 +96,7 @@
                 </div>
                 <h5 class="font-weight-bold mt-4 mb-3">Frank Kosarek</h5>
                 <p class="text-uppercase blue-text"><strong>Founder</strong></p>
-                <p class="grey-text">Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur,
-                    adipisci sed quia non numquam modi tempora eius.</p>
+                <p class="grey-text">Porsche = life</p>
                 <ul class="list-unstyled mb-0">
                     <!-- Facebook -->
                     <a class="p-2 fa-lg fb-ic">
@@ -130,11 +122,11 @@
                 </div>
                 <h5 class="font-weight-bold mt-4 mb-3">Victor Fateh</h5>
                 <p class="text-uppercase blue-text"><strong>Co Founder</strong></p>
-                <p class="grey-text">Victor enjoys debugging with dogs.</p>
+                <p class="grey-text">Can only code within petting distance of a dog.</p>
                 <ul class="list-unstyled mb-0">
                     <!-- Instagram -->
-                    <a class="p-2 fa-lg ins-ic">
-                        <i class="fa fa-instagram blue-text"> </i>
+                    <a class="p-2 fa-lg ins-ic" href="https://instagram.com">
+                        <i class="fa fa-instagram blue-text"></i>
                     </a>
                 </ul>
             </div>
