--- a/templates/contact.html
+++ b/templates/contact.html
@@ -57,7 +57,7 @@
 
 <header class="masthead text-center">
     <div class="container">
-        <h2 class="font-weight-light mb-0">Have a more specific question? Send it over!</h2>
+        <h2 class="font-weight-light mb-0">Any more questions? Drop us a line below.</h2>
         <br><br>
         <div class="row">
             <div class="col-lg-8 mx-auto">
@@ -129,12 +129,11 @@
     <div class="container">
         <div class="row">
             <div class="col-md-4 mb-5 mb-lg-0">
-                <h4 class="text-uppercase mb-4 text-white">Location</h4>
-                <p class="lead mb-0">San Francisco
-                    <br>California</p>
+                <h4 class="text-uppercase mb-4 text-white">Where</h4>
+                <p class="lead mb-0">San Francisco <br> CA</p>
             </div>
             <div class="col-md-4 mb-5 mb-lg-0">
-                <h4 class="text-uppercase mb-4 text-white">Find us</h4>
+                <h4 class="text-uppercase mb-4 text-white">Social</h4>
                 <ul class="list-inline mb-0">
                     <!--<li class="list-inline-item">-->
                         <!--<a class="btn btn-outline-light btn-social text-center rounded-circle" href="#">-->
@@ -161,12 +160,12 @@
                             <!--<i class="fa fa-fw fa-dribbble"></i>-->
                         <!--</a>-->
                     <!--</li>-->
-                    <h6 class="lead mb-0 text-white">Coming soon!</h6>
+                    <h6 class="lead mb-0 text-white">Coming soon</h6>
                 </ul>
             </div>
             <div class="col-md-4">
                 <h4 class="text-uppercase mb-4 text-white">InspectX</h4>
-                <p class="lead mb-0">Inspecting and buying a car should not be difficult</p>
+                <p class="lead mb-0">Making buying easier</p>
             </div>
         </div>
     </div>
