--- a/templates/index.html
+++ b/templates/index.html
@@ -13,6 +13,9 @@
     <!-- Bootstrap core CSS -->
     <link href="/static/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 
+    <link href="https://cdn.rawgit.com/mdehoog/Semantic-UI/6e6d051d47b598ebab05857545f242caf2b4b48c/dist/semantic.min.css" rel="stylesheet" type="text/css" />
+
+
     <!-- Custom fonts for this template -->
     <link href="/static/vendor/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
     <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css">
@@ -27,8 +30,9 @@
 
     <link href="/static/css/animatedzebra.css" rel="stylesheet">
 
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datetimepicker/4.17.43/css/bootstrap-datetimepicker.min.css"
-          rel="stylesheet">
+    <link href="/static/vendor/datepicker/calendar.min.css" rel="stylesheet">
+
+    <link rel="stylesheet" href="/static/css/gauge.css">
 
 </head>
 
@@ -63,14 +67,15 @@
         <!--<img style="width:13em;" class="img-fluid mb-5 d-block mx-auto" src="/static/img/profile.png" alt="inspectx logo">-->
         <h1 class="text-uppercase mb-0">Let's Buy a Car</h1>
         <hr class="star-dark">
-        <h2 class="font-weight-light mb-0">Find - Inspect - Love</h2>
+        <!--<h2 class="font-weight-light mb-0">Find - Inspect - Love</h2>-->
+        <h2 class="font-weight-light mb-0">We'll get you an expert mechanical inspection on any car.</h2>
     </div>
 </header>
 
 <!-- Contact Section -->
 <section id="contact">
     <div class="container">
-        <h2 class="text-center text-uppercase text-secondary mb-0" id="title-start">Set up an inspection</h2>
+        <h2 class="text-center text-uppercase text-secondary mb-0" id="title-start">Interested?</h2>
         <h2 class="text-center text-uppercase text-secondary mb-0" id="title-complete" style="display: none;">All
             set!</h2>
         <h2 class="text-center text-uppercase text-secondary mb-0" id="title-error" style="display: none;">oops</h2>
@@ -121,7 +126,6 @@
                     </div>
                     <div class="control-group">
                         <div class="form-group controls mb-0 pb-2">
-                            <br>
                             <select class="form-control form-control-lg" id="location" rows="5" required name="location"
                                     required="required">
                                 <option value="">Pick a Location</option>
@@ -141,11 +145,12 @@
                         <hr>
                     </div>
                     <div class="control-group">
-                        <!--<div class="form-group controls mb-0 pb-2">-->
-                        <!--<input class="form-control" type="date" id="date">-->
-                        <!--</div>-->
-                        <!-- DATETIMEPICKER TO FIX -->
-                        <div class="container" name="date" required="required" id="date">
+                        <div class="form-group controls mb-0" id="datepicker">
+                            <div class="ui input icon" style="width: 100%;">
+                                <i class="calendar icon"></i>
+                                <input type="text" placeholder="Select Inspection Date" require="required" name="date" autocomplete="off" id="date">
+                                <br>
+                            </div>
                         </div>
                         <hr>
                     </div>
@@ -154,6 +159,7 @@
                         <button type="submit" class="btn btn-primary btn-xl" style="color: black;"
                                 id="sendMessageButton">Request Inspection
                         </button>
+                        <div class="loader" id='loading' style="display:none;"></div>
                     </div>
                 </form>
                 <div id="successAlert" class="alert alert-success text-center" role="alert" style="display:none;"></div>
@@ -195,12 +201,11 @@
 <!-- Custom scripts for this template -->
 <script src="/static/js/freelancer.min.js"></script>
 
-<script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.22.2/moment.min.js"></script>
-
-<script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datetimepicker/4.17.43/js/bootstrap-datetimepicker.min.js
-"></script>
+<script src="{{ url_for('static', filename='vendor/datepicker/calendar.min.js') }}"></script>
 
 <script src="{{ url_for('static', filename='js/form.js') }}"></script>
+
+<script src="https://cdn.rawgit.com/mdehoog/Semantic-UI/6e6d051d47b598ebab05857545f242caf2b4b48c/dist/semantic.min.js"></script>
 
 </body>
 
