Finished LP. TODO: standardize styling.

--- a/templates/about.html
+++ b/templates/about.html
@@ -41,7 +41,7 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarResponsive">
             <ul class="navbar-nav ml-auto">
-                <li class="nav-item mx-0 mx-lg-1">
+                <li class="active nav-item mx-0 mx-lg-1">
                     <a class="active nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger" href="/about">About</a>
                 </li>
                 <li class="nav-item mx-0 mx-lg-1">
@@ -57,10 +57,17 @@
         <br><br><br>
         <h2 class="text-center text-uppercase">The Inspection</h2>
         <hr class="mb-5">
+        <div class="row">
+            <div class="col-lg-12 ml-auto text-left">
+                <p class="lead">Our 200-point inspection checklist is the best in the business. <br>Our technicians are the
+                    best in the business. <br>The result? <br>The best mechanical and cosmetic inspection available anywhere.
+                    Get the exact checklist below!</p>
+            </div>
+        </div>
         <div class="text-center mt-4">
             <a class="btn btn-xl btn-outline-dark" href="/static/img/checklist.pdf" target="_blank">
                 <i class="fa fa-download mr-2"></i>
-                Get the Inspection
+                Inspection
             </a>
         </div>
     </div>
@@ -71,10 +78,12 @@
         <h2 class="text-center text-uppercase text-white">The Mechanics</h2>
         <hr class="mb-5" style="background-color: white;">
         <div class="row text-white">
-            <div class="col-lg-12 ml-auto text-center">
-                <p class="lead">Every
-                    InspectX approved mechanic drives out to the sellers vehicle and performs our standardized
-                    inspection.</p>
+            <div class="col-lg-12 ml-auto text-left">
+                <p class="lead">We give you on-demand access to the best technicians in the auto industry. Each inspectX
+                    technician has over 5 years of brand-specific experience at a dealership or independent shop.
+                    <br><br>
+                    All of that means that our mobile techs are the best way to get the need-to-know on any car you’re
+                    buying or selling.</p>
             </div>
         </div>
     </div>
